Fix layout bugs on Nexus

--- a/src/components/AppBar.scss
+++ b/src/components/AppBar.scss
@@ -1,5 +1,6 @@
 .AppBar {
     h1 {
         text-align: center;
+        font-size: 23px !important;
     }
 }
