--- a/src/pages/HomePage.scss
+++ b/src/pages/HomePage.scss
@@ -51,7 +51,7 @@
             top: 0;
             right: 5%;
             width: 28px !important;
-            height: auto !important;
+            height: 28px !important;
         }
     }
 }
